# dreamer_v3_torch

./: .gitignore  configs.yaml  dreamer.py  pyproject.toml  tools.py
envs/: atari.py  crafter.py  memorymaze.py  minecraft_minerl.py  wrappers.py
scripts/: atari100k.sh  crafter.sh  dmc_proprio.sh  dmc_vision.sh  memorymaze.sh  minecraft.sh  overall.sh
