[project]
name = "dreamerv3-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ale-py>=0.11.2",
    "atari-py==0.2.9",
    "cloudpickle==3.0.0",
    "crafter==1.8.0",
    "dm-control==1.0.9",
    "einops==0.3.0",
    "gym>=0.23.1",
    "gymnasium>=1.2.2",
    "matplotlib==3.8.4",
    "memory-maze==1.0.3",
    "minerl-mirror",
    "moviepy==1.0.3",
    "mujoco==2.3.5",
    "numpy==1.23.5",
    "opencv-python==4.7.0.72",
    "protobuf==3.20.0",
    "ruamel-yaml==0.17.4",
    "tensorboard==2.17.1",
    "torch==2.4.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.sources]
minerl-mirror = { path = "minerl_mirror-0.4.4-cp311-cp311-linux_x86_64.whl" }
